--- a/educaWeb/templates/educaWeb/layout.html
+++ b/educaWeb/templates/educaWeb/layout.html
@@ -84,7 +84,7 @@
     {% endif %}
 
     <!-- Main Content -->
-    <div class="container-fluid">
+    <div class="container-fluid main-content">
         {% block body %}
         {% endblock %}
     </div>
