--- a/educaWeb/static/educaWeb/style.css
+++ b/educaWeb/static/educaWeb/style.css
@@ -1,9 +1,11 @@
 /*Estilos principales*/
-body {
+html,body {
+    height: 100%;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 .hero {
@@ -105,7 +107,12 @@ body {
     margin: 15px 10px;
 }
 
-/* Estilos de mi layour */
+/* Estilos de mi layout */
+.main-content{
+    min-height: calc(100vh - 60px); /* Ajusta según la altura del footer */
+    padding-bottom: 60px; /* Ajusta el padding según la altura del footer */
+    box-sizing: border-box;
+}
 .container-fluid .navbarElements {
     display: flex;
     justify-content: space-between;
@@ -120,12 +127,13 @@ body {
 
 .footer {
     position: fixed;
-    left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #333;
+    height: 60px; /* Ajusta según la altura de tu footer */
+    background-color: #000; /* Cambia esto según el estilo de tu footer */
+    color: #fff; /* Cambia esto según el estilo de tu footer */
     text-align: center;
-    color: #fff;
+    line-height: 30px; /* Ajusta según la altura de tu footer */
 }
 
 
@@ -232,6 +240,30 @@ body {
     transform: scale(1.05);
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
+.card-edit-button, .card-delete-button {
+    display: inline-block;
+    background-color: #4ade80; /* Verde para editar */
+    color: white;
+    font-size: 1rem;
+    padding: 8px 16px;
+    border-radius: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    margin: 5px;
+    transition: background-color 0.3s;
+}
+
+.card-delete-button {
+    background-color: #f87171; /* Rojo para borrar */
+}
+
+.card-edit-button:hover {
+    background-color: #22c55e;
+}
+
+.card-delete-button:hover {
+    background-color: #ef4444;
+}
 
 .btn-spacing{
     margin-right: 35px; 
@@ -273,6 +305,99 @@ body {
 .user-nav-item {
     margin-right: 20px; /* Añade un margen a la derecha de cada elemento */
 }
+
+/*Login Styles*/
+.login-container {
+    background-color: rgba(255, 255, 255, 0.5); 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+}
+.login-box {
+    background-color:rgba(255, 255, 255, 0.8); /* Fondo blanco para la caja del login */
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 50%;
+    max-width: 400px;
+    text-align: center;
+    margin-bottom: auto;
+    margin-top: auto;
+}
+.login-box h2 {
+    margin-bottom: 1.5rem;
+}
+.login-box .form-group {
+    margin-bottom: 1.5rem;
+}
+.login-box .form-control {
+    height: 45px;
+    font-size: 16px;
+}
+.login-box .btn-primary {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    background-color: #4caf50; /* Verde */
+    border-color: #4caf50;
+}
+.login-box .btn-primary:hover {
+    background-color: #45a049;
+}
+.login-box a {
+    color: #4caf50;
+}
+
+/*Register*/
+.register-container {
+    background-color: rgba(255, 255, 255, 0.8); /* Fondo semi-transparente */
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    max-width: 400px;
+    text-align: center;
+    z-index: 1; /* Asegurar que el contenedor esté sobre otros elementos */
+}
+.register-container h2 {
+    margin-bottom: 20px;
+}
+.register-container .form-group {
+    margin-bottom: 15px;
+}
+.register-container .form-control {
+    height: 45px;
+    font-size: 16px;
+}
+.register-container .btn-primary {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    background-color: #4caf50; /* Verde */
+    border-color: #4caf50;
+}
+.register-container .btn-primary:hover {
+    background-color: #45a049;
+}
+.register-container a {
+    color: #4caf50;
+}
+.footer {
+    margin-top: 20px;
+    font-size: 12px;
+    color: #888888;
+}
+
+/* Estilo para el campo select */
+.register-container .form-control-select {
+    height: 45px;
+    font-size: 16px;
+}
+
 /* Media query para pantallas de 380px a 860px de ancho */
 @media (min-width: 360px) and (max-width: 860px) {
     .user-navbar-nav-list {
@@ -285,5 +410,38 @@ body {
     .user-nav-item {
         margin-right: 0; /* Elimina el margen a la derecha de cada elemento */
         flex: 1; /* Permite que los elementos se expandan para ocupar el espacio disponible */
+    }
+
+    .login-container {
+        width: 95%;
+        padding: 15px;
+    }
+    .login-container h2 {
+        font-size: 1.5em;
+    }
+    .login-container .form-control {
+        height: 40px;
+        font-size: 14px;
+    }
+    .login-container .btn-primary {
+        padding: 8px;
+        font-size: 14px;
+    }
+
+    .register-container {
+        width: 95%;
+        padding: 15px;
+    }
+    .register-container h2 {
+        font-size: 1.5em;
+    }
+    .register-container .form-control,
+    .register-container .form-control-select {
+        height: 40px;
+        font-size: 14px;
+    }
+    .register-container .btn-primary {
+        padding: 8px;
+        font-size: 14px;
     }
 }
