--- a/educaWeb/templates/educaWeb/cursos.html
+++ b/educaWeb/templates/educaWeb/cursos.html
@@ -47,6 +47,7 @@
               {% endfor %}
             </select>
           </div>
+        <input type="hidden" id="cursoId" value="">
         <input type="hidden" name="usuarioId" id="usuarioCurso" value="{{ request.user.id }}">
            
         
