--- a/educaWeb/templates/educaWeb/login.html
+++ b/educaWeb/templates/educaWeb/login.html
@@ -1,26 +1,40 @@
 {% extends "educaWeb/layout.html" %}
-{% load static %} 
-
+{% load static %}
 
 {% block body %}
+    <style>
+         .login-background {
+            background: url("{% static 'educaWeb/images/logpexels.jpg' %}") no-repeat center center fixed;
+            background-size: cover;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            width: 100vw;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 
-    <h2>Login</h2>
-
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
-
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Nombre de Usuario">
+    <div class="login-background">
+        <div class="login-container">
+            <div class="login-box">
+                <h2>Login</h2>
+                {% if message %}
+                    <div>{{ message }}</div>
+                {% endif %}
+                <form action="{% url 'login' %}" method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <input autofocus class="form-control" type="text" name="username" placeholder="Nombre de Usuario">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="password" name="password" placeholder="Password">
+                    </div>
+                    <input class="btn btn-primary" type="submit" value="Login">
+                </form>
+                <p>Don't have an account? <a href="{% url 'register' %}">Register here.</a></p>
+            </div>
         </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
-
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
-
+    </div>
 {% endblock %}
