--- a/educaWeb/templates/educaWeb/cursos.html
+++ b/educaWeb/templates/educaWeb/cursos.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="container-lectures">
-    <div class="cards-lecciones row row-cols-1 row-cols-md-2 g-4">
+    <div class="cards-lecciones">
 
     </div>
 </div>
@@ -26,7 +26,7 @@
     <h2>
         Cree un nuevo curso
     </h2>
-    <form>
+    <form class="frm-cursos">
         <div class="form-group">
           <label for="nombreCurso">Nombre del Curso</label>
           <input type="text" class="form-control" id="nombreCurso" placeholder="Ingrese el nombre del curso">
@@ -54,4 +54,37 @@
         <button type="submit"  id="btn-save" class="btn btn-primary">Guardar</button>
       </form>
 </div>
+
+<div class="form-lecciones" id="contenidoLeccion">
+  <h2>
+      Cree una nueva lección
+  </h2>
+  <form class="frm-lecciones">
+      <div class="form-group">
+        <label for="nombreLeccion">Nombre de la Lección</label>
+        <input type="text" class="form-control" id="nombreLeccion" placeholder="Ingrese el nombre de la lección">
+      </div>
+       <!--Agregar campo para la imagien url de la leccion-->
+      <div class="form-group">
+        <label for="urlImgLeccion">Url de imagen de portada</label>
+        <input type="text" class="form-control" id="urlImgLeccion" placeholder="Ingrese la URL de la imagen de la lección">
+      </div>
+
+      <div class="form-group">
+        <label for="descripcionLeccion">Contenido del Curso</label>
+        <textarea class="form-control" id="descripcionLeccion" placeholder="Ingrese la descripción de la lección" rows="3"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="urlVideoLeccion">URL del video de la lección</label>
+        <input type="text" class="form-control" id="urlVideoLeccion" placeholder="Ingrese la URL del video de la lección">
+      </div>
+
+      <!-- Campo oculto para el cursoId, asegúrate de establecer el valor correcto aquí -->
+      <input type="hidden" name="cursoId" id="cursoLeccion" value="">
+      <input type="hidden" id="leccionId" value="">
+      <input type="hidden" name="usuarioId" id="usuarioLeccion" value="{{ request.user.id }}">
+      <button type="submit"  id="btn-save-leccion" class="btn btn-primary">Guardar</button>
+    </form>
+</div>
+
 {% endblock %}
