--- a/educaWeb/templates/educaWeb/layout.html
+++ b/educaWeb/templates/educaWeb/layout.html
@@ -102,8 +102,8 @@
     {% block scripts %}
     <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <script src="{% static 'educaWeb/main.js' %}"></script>
-    <script src="{% static 'educaWeb/functions.js' %}"></script>
+    <script type="module" src="{% static 'educaWeb/main.js' %}"></script>
+    <script type="module" src="{% static 'educaWeb/functions.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     {% endblock %}
    
