--- a/educaWeb/templates/educaWeb/layout.html
+++ b/educaWeb/templates/educaWeb/layout.html
@@ -14,17 +14,18 @@
 
 <body>
     <!-- Main Navbar -->
-    <div class="main-nav">
+    <div class="main-nav" style="margin-right: 0px;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light n-elm">
             <div class="container-fluid">
-                <div class="icon">
+                <div class="icon" style="font-weight: bold;">
                     <a class="navbar-brand" href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                        LERN   
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
                         fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
                         <path
                             d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783" />
                     </svg>
-                    </a>
+                </a>
                 </div>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +41,6 @@
                     
             
                         {% if user.is_authenticated %}
-                        
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'cursos' %}">Cursos</a>
                             </li>
@@ -67,15 +67,24 @@
     <div class="users-nav" style="overflow-x: auto;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">{{ user.username }}</a>
+                <a class="navbar-brand" href="#">Hola! {{ user.username }}</a>
                 <div class="" id="userNavbarNav" style="flex-grow: 1;">
                     <ul class="navbar-nav" style="display: flex; flex-direction: row; justify-content: space-evenly; padding-left: 0px; margin-bottom: 0; list-style: none; overflow-x: auto;">
+
+                        {% if  tipo_usuario == 'student' %}
                         <li class="nav-item" style="flex: 0 0 auto;">
-                            <a class="nav-link" aria-current="page" href="">Mis cursos </a>
+                            <a id="misCursosEstudiante" data-student-id="{{ Idusuario }}" class="nav-link" aria-current="page" href="#">Mis cursos </a>
+                        </li>
+                        {% endif %}
+
+                        {% if  tipo_usuario == 'teacher' %}
+                        <li class="nav-item" style="flex: 0 0 auto;">
+                            <a id="misCursosMaestro" data-creador-id="{{ Idusuario }}" class="nav-link" href="#">Mis cursos </a>
                         </li>
                         <li class="nav-item" style="flex: 0 0 auto;">
                             <a id="crearCurso" class="nav-link" href="#">Crear curso </a>
                         </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -84,7 +93,7 @@
     {% endif %}
 
     <!-- Main Content -->
-    <div class="container-fluid main-content">
+    <div class="container-fluid main-content" data-tipo-usuario="{{ tipo_usuario }}" data-student-id="{{ Idusuario }}">
         {% block body %}
         {% endblock %}
     </div>
