--- a/educaWeb/templates/educaWeb/login.html
+++ b/educaWeb/templates/educaWeb/login.html
@@ -26,12 +26,12 @@
                 <form action="{% url 'login' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <input autofocus class="form-control" type="text" name="username" placeholder="Nombre de Usuario">
+                        <input autofocus class="form-control" required type="text" name="username" placeholder="Nombre de Usuario">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" name="password" placeholder="Password">
+                        <input class="form-control" required type="password" name="password" placeholder="Password">
                     </div>
-                    <input class="btn btn-primary" type="submit" value="Login">
+                    <input class="btn btn-primary" required type="submit" value="Login">
                 </form>
                 <p>Don't have an account? <a href="{% url 'register' %}">Register here.</a></p>
             </div>
