--- a/educaWeb/templates/educaWeb/register.html
+++ b/educaWeb/templates/educaWeb/register.html
@@ -25,17 +25,17 @@
             <form action="{% url 'register' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <input autofocus class="form-control" type="text" name="username" placeholder="Nombre de Usuario">
+                    <input autofocus class="form-control" type="text" required name="username" placeholder="Nombre de Usuario">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="password" placeholder="Password">
+                    <input class="form-control" type="password" required name="password" placeholder="Password">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+                    <input class="form-control" type="password"  required name="confirmation" placeholder="Confirm Password">
                 </div>
                 <div class="form-group">
                     <label for="tipo_usuario" style="margin-bottom: 15px;">Que tipo de usuario eres?</label>
-                    <select class="form-control form-control-select" name="tipo_usuario">
+                    <select class="form-control form-control-select" required name="tipo_usuario">
                         {% for value, label in tipo_usuario %}
                         <option value="{{ value }}">{{ label }}</option>
                         {% endfor %}
